Add more docs, add initial work on lookups
Still haven't implemented the bulk of the lookup, but there's enough files at this point that I just need to commit

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,8 +1,19 @@
-#add_library(umbrasrc STATIC 
-    # Non-executable files go here
-#)
-add_executable(umbra umbra/Main.cpp)
+add_library(umbrasrc STATIC 
+    umbra/ModuleLoader.cpp
 
-target_include_directories(umbra PUBLIC ./)
+    umbra/except/Exception.cpp
+
+    umbra/modules/ZellijModule.cpp
+
+    umbra/util/FilesystemExt.cpp
+    umbra/util/Parse.cpp
+)
+add_executable(
+    umbra umbra/Main.cpp
+)
+target_link_libraries(umbrasrc PUBLIC stc CLI11::CLI11)
+target_link_libraries(umbra PUBLIC umbrasrc)
+
+target_include_directories(umbrasrc PUBLIC ./)
 
 # vim:ft=cmake
