--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,21 +1,20 @@
 add_executable(tests 
-    src/ABCDTests.cpp
+    src/util/ParseTests.cpp
+
+    src/Main.cpp
 )
 
-Include(FetchContent)
-
-# TODO: Ensure this is up-to-date prior to using the code
-# The template will not be kept 100% up-to-date due to this being a waste of time
+include(FetchContent)
 FetchContent_Declare(
   Catch2
   GIT_REPOSITORY https://github.com/catchorg/Catch2.git
-  GIT_TAG v3.7.1
+  GIT_TAG v3.11.0
 )
 
 FetchContent_MakeAvailable(Catch2)
 
-target_link_libraries(tests Catch2::Catch2WithMain)
-
+target_link_libraries(tests Catch2::Catch2)
 target_link_libraries(tests umbrasrc)
+target_include_directories(tests PRIVATE ./src/)
 
 # vim:ft=cmake
