--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,11 +3,14 @@ add_library(umbrasrc STATIC
 
     umbra/except/Exception.cpp
 
+    umbra/modules/DevenvModule.cpp
     umbra/modules/Module.cpp
     umbra/modules/ZellijModule.cpp
 
     umbra/util/FilesystemExt.cpp
     umbra/util/Parse.cpp
+
+    umbra/wranglers/Shell.cpp
 )
 add_executable(
     umbra umbra/Main.cpp
@@ -16,6 +19,17 @@ target_link_libraries(umbrasrc PUBLIC stc CLI11::CLI11 spdlog::spdlog)
 target_link_libraries(umbra PUBLIC umbrasrc)
 
 target_include_directories(umbrasrc PUBLIC ./)
+
+# Largely for development use
+add_custom_target(resources
+    COMMAND ${CMAKE_COMMAND} -E make_directory ${CMAKE_BINARY_DIR}/share
+    COMMAND ${CMAKE_COMMAND} -E make_directory ${CMAKE_BINARY_DIR}/share/umbra
+
+    COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/shell ${CMAKE_BINARY_DIR}/share/umbra
+    COMMENT "Copying resources"
+)
+add_dependencies(umbrasrc resources)
+
 
 # Linting {{{
 if (UMBRA_LINT)
