--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,10 +35,15 @@ FetchContent_Declare(spdlog
     GIT_TAG v1.16.0
     EXCLUDE_FROM_ALL
 )
+FetchContent_Declare(json
+    GIT_REPOSITORY https://github.com/nlohmann/json
+    GIT_TAG v3.12.0
+)
 FetchContent_MakeAvailable(
     cli11
     stc
     spdlog
+    json
 )
 # Set up versioning {{{
 find_program(GIT git)
