--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,7 @@ FetchContent_Declare(spdlog
 FetchContent_Declare(json
     GIT_REPOSITORY https://github.com/nlohmann/json
     GIT_TAG v3.12.0
+    EXCLUDE_FROM_ALL
 )
 FetchContent_MakeAvailable(
     cli11
