--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   tests:
     runs-on: ubuntu-24.04
+    image: ubuntu:rolling
     steps:
       - uses: actions/checkout@main
       - name: Install deps
@@ -27,6 +28,7 @@ jobs:
           cmake --build . --target test
   lint:
     runs-on: ubuntu-24.04
+    image: ubuntu:rolling
     steps:
       - uses: actions/checkout@main
       - name: Install deps
