--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@main
       - name: Install deps
         run: |
-          apt update && sudo apt upgrade -y
+          apt update && apt upgrade -y
           apt install -y cmake
       - name: Print environment
         run: |
@@ -33,7 +33,7 @@ jobs:
       - uses: actions/checkout@main
       - name: Install deps
         run: |
-          apt update && sudo apt upgrade -y
+          apt update && apt upgrade -y
           apt install -y cmake
       - name: Print environment
         run: |
