Need more deps for the horde

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Install deps
         run: |
           apt update && apt upgrade -y
-          apt install -y cmake
+          apt install -y cmake gcc build-essential make git
       - name: Print environment
         run: |
           cmake --version
@@ -34,7 +34,7 @@ jobs:
       - name: Install deps
         run: |
           apt update && apt upgrade -y
-          apt install -y cmake
+          apt install -y cmake gcc build-essential make git
       - name: Print environment
         run: |
           cmake --version
