Set up .env.devenv loading

--- a/dev/devenv/.env.devenv
+++ b/dev/devenv/.env.devenv
@@ -7,6 +7,8 @@
             "vars": {
                 "UMBRA_SANITISE": "ON",
                 "UMBRA_LINT": "ON"
+            },
+            "prepend": {
             }
         },
         "prod": {
