Properly document `prepend` limitations

--- a/dev/devenv/.env.devenv
+++ b/dev/devenv/.env.devenv
@@ -6,15 +6,15 @@
         "test": {
             "vars": {
                 "UMBRA_SANITISE": "ON",
-                "UMBRA_LINT": "ON"
-            },
-            "prepend": {
+                "UMBRA_LINT": "ON",
+                "PATH_PREPEND": "{{git_root}}/build/bin"
             }
         },
         "prod": {
             "vars": {
                 "UMBRA_SANITISE": "OFF",
-                "UMBRA_LINT": "ON"
+                "UMBRA_LINT": "ON",
+                "PATH_PREPEND": "{{git_root}}/build/bin"
             }
         }
     }
