Some docs and once again refactoring how scripts are stored
I'll need to add another directory for completions from what I can tell, and it makes sense to not hide the path info behind workflow bullshit

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -39,7 +39,7 @@ jobs:
           mkdir dist/share/umbra
 
           cp build/bin/umbra dist/bin
-          cp -r shell/** dist/share/umbra
+          cp -r share dist/
       - name: Compress distribution
         run: |
           tar -cvzf umbra.tar.gz dist/*
