--- a/dev/devenv/.env.devenv
+++ b/dev/devenv/.env.devenv
@@ -1,20 +1,22 @@
 {
     "envs": {
         "default": {
-            "alias-for": "test"
+            "alias-for": "debug"
         },
-        "test": {
+        "debug": {
             "vars": {
                 "UMBRA_SANITISE": "ON",
                 "UMBRA_LINT": "ON",
-                "PATH_PREPEND": "{{git_root}}/build/bin"
+                "PATH_PREPEND": "{{git_root}}/build/bin",
+                "BUILD_TYPE": "Debug"
             }
         },
-        "prod": {
+        "release": {
             "vars": {
                 "UMBRA_SANITISE": "OFF",
                 "UMBRA_LINT": "ON",
-                "PATH_PREPEND": "{{git_root}}/build/bin"
+                "PATH_PREPEND": "{{git_root}}/build/bin",
+                "BUILD_TYPE": "Release"
             }
         }
     }
