--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,6 +1,8 @@
-add_executable(tests 
+add_executable(umbra_tests 
     src/modules/DevenvModuleTests.cpp
     src/modules/ZellijModuleTests.cpp
+
+    src/modules/devenv/ConfigTests.cpp
 
     src/util/JSONCParserTests.cpp
     src/util/ParseTests.cpp
@@ -20,8 +22,8 @@ FetchContent_Declare(
 
 FetchContent_MakeAvailable(Catch2)
 
-target_link_libraries(tests Catch2::Catch2)
-target_link_libraries(tests umbrasrc)
-target_include_directories(tests PRIVATE ./src/)
+target_link_libraries(umbra_tests Catch2::Catch2)
+target_link_libraries(umbra_tests umbrasrc)
+target_include_directories(umbra_tests PRIVATE ./src/)
 
 # vim:ft=cmake
