--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,6 +6,7 @@ add_library(umbrasrc STATIC
     umbra/modules/DevenvModule.cpp
     umbra/modules/Module.cpp
     umbra/modules/ZellijModule.cpp
+    umbra/modules/meta/MetaModule.cpp
 
     umbra/modules/devenv/ConfigSpec.cpp
 
@@ -24,6 +25,7 @@ PUBLIC
     CLI11::CLI11
     spdlog::spdlog
     nlohmann_json::nlohmann_json
+    cpr::cpr
 )
 target_link_libraries(umbra PUBLIC umbrasrc)
 
